--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.2",
-    "@astrojs/vercel": "^9.0.2",
     "@edgeone/astro": "^1.0.4",
     "@giscus/react": "^3.1.0",
     "@types/react": "^19.2.7",
@@ -24,5 +23,8 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
     "unified": "^11.0.5"
+  },
+  "overrides": {
+    "astro": "6.0.0-alpha.0"
   }
 }
